--- a/css/style.css
+++ b/css/style.css
@@ -326,6 +326,7 @@ header {
 
 .services {
     margin-bottom: 4em;
+    text-align: left;
 }
 
 .service {
@@ -409,7 +410,7 @@ header {
 }
 
 .portfolio__item {
-    background: var(--clr-dark);
+    background: var(--clr-accent);
     overflow: hidden;
 }
 
